@@ -22,5 +22,5 @@ set(KernelPrinting OFF CACHE BOOL "")
 set(KernelNumDomains 16 CACHE STRING "")
 set(KernelMaxNumBootinfoUntypedCap 166 CACHE STRING "")
 set(KernelIsMCS ON CACHE BOOL "")
-set(KernelStaticMaxBudgetUs "(60 * 60 * MS_IN_S * US_IN_MS)" CACHE STRING "")
+set(KernelStaticMaxPeriodUs "(60 * 60 * MS_IN_S * US_IN_MS)" CACHE STRING "")
 include(${CMAKE_CURRENT_LIST_DIR}/seL4Config.cmake)
